subscribe to pewdiepie

--- a/elements.html
+++ b/elements.html
@@ -2,20 +2,12 @@
 <head>
 	<title>Best Website</title>
 </head>
-<body>
-<h1 style="color: orange; text-decoration: underline;"> Heading 1 </h1>
-<h2 style="color: green; text-decoration: underline;">Heading 2</h2>
-<p style="color: magenta;"> This is my first paragraph Yeet
-</p>
-<div >
-	<div>
-		<div>
-			<a href="https://www.google.com/"target="-blank">Go to Google</a>
-		</div>
-	</div>
-</div>
-<p>Hey there my name is:<br>
-Jack</p>
+<body style="background-color: black">
+<h1 style="color: orange; text-decoration: underline;"> Hi this is a cow </h1>
 <img src="https://i.ytimg.com/vi/NHEtD1w5eqI/maxresdefault.jpg">
+<h2 style="color: green; text-decoration: underline;">You probably already knew that</h2>
+<p style="color: magenta;"> but on the of chance you didn't know that now you do :) ALSO SCROLL DOWN
+</p>
+<p style="color: red;font-size: 120px"><br><br><br><br><br><br><br><br><br><br><br><br>SUBSCRIBE TO PEWDIEPIE<br><br><br><br><br></p>
 </body>
 </html>
