--- a/elements.html
+++ b/elements.html
@@ -6,7 +6,7 @@
 <h1 style="color: orange; text-decoration: underline;"> Hi this is a cow </h1>
 <img src="https://i.ytimg.com/vi/NHEtD1w5eqI/maxresdefault.jpg">
 <h2 style="color: green; text-decoration: underline;">You probably already knew that</h2>
-<p style="color: magenta;"> but on the of chance you didn't know that now you do :) ALSO SCROLL DOWN
+<p style="color: magenta;"> but on the off chance you didn't know that now you do :) ALSO SCROLL DOWN
 </p>
 <p style="color: red;font-size: 120px"><br><br><br><br><br><br><br><br><br><br><br><br>SUBSCRIBE TO PEWDIEPIE<br><br><br><br><br></p>
 </body>
